--- a/index.html
+++ b/index.html
@@ -3,6 +3,36 @@
 	<head>
 	</head>
 	<body>
-		<h1>This is my website!</h1>
+		<header>
+			<nav>
+				<div id="logo">AJL</div>
+				<div id="pages">
+					<ul>
+						<li>About</li>
+						<li>Favourites</li>
+						<li>Notes</li>
+						<li>Experiments</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		<section>
+			<article>
+				<h2>About</h2>
+				<div>About text</div>
+			</article>
+			<article>
+				<h2>Favourites</h2>
+				<div>Favourites text</div>
+			</article>
+			<article>
+				<h2>Notes</h2>
+				<div>Notes text</div>
+			</article>
+			<article>
+				<h2>Experiments</h2>
+				<div>Experiments text</div>
+			</article>
+		</section>
 	</body>
 </html>
