Added Projects to menu

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 						<div class="section-text col-md-8">Notes text</div>
 					</article>
 					<article class="row">
+						<h2>Projects</h2>
+						<div class="section-image col-md-4"><img src="furniture/images/placeholder-1000x400.png" alt="Placeholder Image" class="img-thumbnail" /></div>
+						<div class="section-text col-md-8">Projectss text</div>
+					</article>
+					<article class="row">
 						<h2>Experiments</h2>
 						<div class="section-image col-md-4"><img src="furniture/images/placeholder-1000x400.png" alt="Placeholder Image" class="img-thumbnail" /></div>
 						<div class="section-text col-md-8">Experiments text</div>
