Add projects page quick outline and updated index.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 		<div id="page">
 			<header class="container">
 				<nav class="navbar navbar-default">
-					<div id="logo">AJL</div>
+					<div id="logo"><a href="index.html">AJL</a></div>
 					<div id="pages">
 						<ul>
 							<li><a href=".">About</a></li>
 							<li><a href=".">Favourites</a></li>
 							<li><a href=".">Notes</a></li>
+							<li><a href="projects.html">projects</a></li>
 							<li><a href=".">Experiments</a></li>
 						</ul>
 					</div>
@@ -42,7 +43,7 @@
 					<article class="row">
 						<h2>Projects</h2>
 						<div class="section-image col-md-4"><img src="furniture/images/placeholder-1000x400.png" alt="Placeholder Image" class="img-thumbnail" /></div>
-						<div class="section-text col-md-8">Projectss text</div>
+						<div class="section-text col-md-8">Projects text</div>
 					</article>
 					<article class="row">
 						<h2>Experiments</h2>
