--- a/laboratory.html
+++ b/laboratory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>AJL | Projects</title>
+		<title>AJL | Laboratory</title>
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -15,20 +15,20 @@
 	<body>
 		
 		<header>
-			<a href="index.html"><img class="logo" src="furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>		
+			<a href="index.html"><img class="logo" src="furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>	
 			<nav>
 				<ul>
 					<li><a href="aboutme.html">About Me</a></li>
 					<li><a href="favourites.html">Favourites</a></li>
 					<li><a href="notes.html">Notes</a></li>
-					<li><a href="projects.html" class="current">Projects</a></li>
-					<li><a href="laboratory.html">Laboratory</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="laboratory.html" class="current">Laboratory</a></li>
 					<li><a href="resources.html">Resources</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div class="wrap">
-			<h1>Projects</h1>
+			<h1>Laboratory</h1>
 
 		</div>
 
