--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<nav></nav>
 		</header>
 		<div class="wrap">
-			<h1>TITLE</h1>
+			<h1>Andrew J Lim</h1>
 			<section id="menu-items">
 				<article>				
 					<div class="icon icon-about"><i class="fa fa-user-circle"></i></div>
