Added lab page and added content

--- a/favourites.html
+++ b/favourites.html
@@ -29,7 +29,9 @@
 		</header>
 		<div class="wrap">
 			<h1>Favourites</h1>
-
+			<h2>Videos</h2>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/6Cf7IL_eZ38" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/jZkHpNnXLB0" frameborder="0" allowfullscreen></iframe>
 		</div>
 
 		<footer>
