Added base to pages

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Andrew J LIm Personal Website</title>
+		<base href="http://www.andrewjlim.com">
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script
