--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>AJL | Projects</title>
+		<base href="http://www.andrewjlim.com">
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -29,7 +30,9 @@
 		</header>
 		<div class="wrap">
 			<h1>Projects</h1>
-
+			<ul>
+				<li><a href="https://www.youtube.com/playlist?list=PLfzpJtvh25ptmyFpAeVbOALjH-Etmtr72">Word Seeker</a>: Youtube video word searches that I am using so that I can study Digital Marketing.</li>
+			</ul>
 		</div>
 
 		<footer>
