--- a/laboratory.html
+++ b/laboratory.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>AJL | Laboratory</title>
+		<base href="http://www.andrewjlim.com">
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
