update before building new design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<title>Andrew J LIm Personal Website</title>
-		<base href="http://www.andrewjlim.com">
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script
@@ -25,6 +24,7 @@
 		</header>
 		<div class="wrap">
 			<h1>Andrew J Lim</h1>
+			<p>Hello.<br />You have stumbled upon my website. This is not a portfolio website (yet). This is a personal website that I have put online so that I can experiment with learning web development. Feel free to look around though.</p>
 			<section id="menu-items">
 				<article>				
 					<div class="icon icon-about"><i class="fa fa-user-circle"></i></div>
