--- a/laboratory/openBoxUsingCSS.html
+++ b/laboratory/openBoxUsingCSS.html
@@ -2,15 +2,14 @@
 <html lang="en">
 	<head>
 		<title>AJL | Laboratory - CSS Transitions</title>
-		<base href="http://www.andrewjlim.com">
-		<link rel="stylesheet" href="furniture/css/main.css">
+		<link rel="stylesheet" href="../../furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
   				integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   				crossorigin="anonymous"></script>
-		<script src="furniture/js/main.js"></script>
-		<script defer src="furniture/js/solid.js"></script>
-  		<script defer src="furniture/js/fontawesome.js"></script>
+		<script src="../../furniture/js/main.js"></script>
+		<script defer src="../../furniture/js/solid.js"></script>
+  		<script defer src="../../furniture/js/fontawesome.js"></script>
   		<style type="text/css">
 			.collapsed {
 				height: 0;
@@ -28,15 +27,15 @@
 	<body>
 		
 		<header>
-			<a href="index.html"><img class="logo" src="furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>
+			<a href="../../index.html"><img class="logo" src="../../furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>
 			<nav>
 				<ul>
-					<li><a href="aboutme.html">About Me</a></li>
-					<li><a href="favourites.html">Favourites</a></li>
-					<li><a href="notes.html">Notes</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="laboratory.html">Laboratory</a></li>
-					<li><a href="resources.html" class="current">Resources</a></li>
+					<li><a href="../../aboutme.html">About Me</a></li>
+					<li><a href="../../favourites.html">Favourites</a></li>
+					<li><a href="../../notes.html">Notes</a></li>
+					<li><a href="../../projects.html">Projects</a></li>
+					<li><a href="../../laboratory.html" class="current">Laboratory</a></li>
+					<li><a href="../../resources.html">Resources</a></li>
 				</ul>
 			</nav>
 		</header>
