--- a/laboratory/parallaxScreenCSS.html
+++ b/laboratory/parallaxScreenCSS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>AJL | Projects</title>
+		<title>AJL | Laboratory - CSS Transitions</title>
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -10,28 +10,42 @@
 		<script src="furniture/js/main.js"></script>
 		<script defer src="furniture/js/solid.js"></script>
   		<script defer src="furniture/js/fontawesome.js"></script>
+  		<style type="text/css">
+			.container {
+				max-width: 960px;
+				margin: 0 auto;
+				background: #f9f9f9;
+				font-size: 24px;
+				padding: 25px;
+			}
+
+			.parallax {
+				background: url('laboratory/resources/parallaxCSS/stellar-spire-eagle-nebula-1400x900.jpg');
+			}
+		</style>
 	</head>
 
 	<body>
 		
 		<header>
-			<a href="index.html"><img class="logo" src="furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>		
+			<a href="index.html"><img class="logo" src="furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>
 			<nav>
 				<ul>
 					<li><a href="aboutme.html">About Me</a></li>
 					<li><a href="favourites.html">Favourites</a></li>
 					<li><a href="notes.html">Notes</a></li>
-					<li><a href="projects.html" class="current">Projects</a></li>
-					<li><a href="laboratory.html">Laboratory</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="laboratory.html" class="current">Laboratory</a></li>
 					<li><a href="resources.html">Resources</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div class="wrap">
-			<h1>Projects</h1>
-			<ul>
-				<li><a href="https://www.youtube.com/playlist?list=PLfzpJtvh25ptmyFpAeVbOALjH-Etmtr72" target="_blank">Word Seeker</a>: Youtube video word searches that I am using so that I can study Digital Marketing.</li>
-			</ul>
+			<div class="container">
+				<div class="parallax">
+					
+				</div>
+			</div>
 		</div>
 
 		<footer>
