--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<title>AJL | Resources</title>
-		<base href="http://www.andrewjlim.com">
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -33,15 +32,13 @@
 			<h2>Services</h2>
 			<ul>
 				<li><a href="https://caniuse.com/" target="_blank">caniuse.com</a>: Shows browser support for front-end</li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
 			</ul>
 
 			<h2>References</h2>
 			<ul>
 				<li><a href="http://leaverou.github.io/animatable/" target="_blank">animatable (by Lea Verou)</a>: shows examples of transition properties. Lea Verou also does great talks on <a href="https://www.youtube.com/results?search_query=lea+verou" target="_blank">YouTube</a></li>
+				<li><a href="http://cubic-bezier.com/#.17,.67,.83,.67" target="_blank">cubicbezier.com (by Lea Verou)</a>: allows you to play with CSS transition using cubic bezier values.</li>
+				<li><a href="http://www.creativebloq.com/web-design/steps-perfect-website-layout-812625" target="_blank">23 steps to the perfect website layout</a>: An article about the high level view of the website design methodology.</li>
 			</ul>
 		</div>
 
