--- a/laboratory.html
+++ b/laboratory.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<title>AJL | Laboratory</title>
-		<base href="http://www.andrewjlim.com">
 		<link rel="stylesheet" href="furniture/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -30,7 +29,9 @@
 		</header>
 		<div class="wrap">
 			<h1>Laboratory</h1>
-
+			<ul>
+				<li><a href="laboratory/openBoxUsingCSS.html">CSS - open box</a></li>
+			</ul>
 		</div>
 
 		<footer>
