created new header and added sections

--- a/index.html
+++ b/index.html
@@ -1,80 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
 	<head>
-		<title>Andrew J LIm Personal Website</title>
-		<link rel="stylesheet" href="furniture/css/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-		<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-		<script src="furniture/js/main.js"></script>
-		<script defer src="furniture/js/solid.js"></script>
-  		<script defer src="furniture/js/fontawesome.js"></script>
-  		<style type="text/css">
-			h1 {display: none;}
-  		</style>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Andrew J Lim | Personal Website</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-/pOR6TNYPdUaQQQRKQ4XHznZ4U2K/Lscb3u6jshUngC/31fLTuyX9FZb24gp4O3J" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link rel="stylesheet" href="./furniture/css/main.css">
 	</head>
-
 	<body>
-		
-		<header>
-			<a href="index.html"><img class="logo" src="furniture/img/logo.png" alt="Andrew J Lim Personal Website"></a>	
-			<nav></nav>
-		</header>
-		<div class="wrap">
-			<h1>Andrew J Lim</h1>
-			<p>Hello.<br />You have stumbled upon my website. This is not a portfolio website (yet). This is a personal website that I have put online so that I can experiment with learning web development. Feel free to look around though.</p>
-			<section id="menu-items">
-				<article>				
-					<div class="icon icon-about"><i class="fa fa-user-circle"></i></div>
-					<h2><a href="aboutme.html">About Me</a></h2>
-					<div class="menu-text">
-						<p>Information about myself</p>
-					</div>
-				</article>
-				<article>				
-					<div class="icon icon-fav"><i class="fa fa-star-exclamation"></i></div>
-					<h2><a href="favourites.html">Favourites</a></h2>
-					<div class="menu-text">
-						<p>Things that inspire, educate or make me happy</p>
-					</div>
-				</article>
-				<article>				
-					<div class="icon icon-notes"><i class="fa fa-pen-alt"></i></div>
-					<h2><a href="notes.html">Notes</a></h2>
-					<div class="menu-text">
-						<p>Thougths about various things</p>
-					</div>	
-				</article>
-				<article>				
-					<div class="icon icon-lab"><i class="fa fa-cog"></i></div>
-					<h2><a href="resources.html">Resources</a></h2>
-					<div class="menu-text">
-						<p>Tools and sites that I use</p>
-					</div>
-				</article>
-				<article>				
-					<div class="icon icon-lab"><i class="fa fa-suitcase"></i></div>
-					<h2><a href="projects.html">Projects</a></h2>
-					<div class="menu-text">
-						<p>Projects I've built.</p>
-						<p><b>Note:</b> Some of these require desktop to view</p>
-					</div>
-				</article>
-				<article>				
-					<div class="icon icon-lab"><i class="fa fa-flask"></i></div>
-					<h2><a href="laboratory.html">Laboratory</a></h2>
-					<div class="menu-text">
-						<p>Experimental area for development.</p>
-						<p><b>Note:</b> Some of these require desktop to view</p>
-					</div>
-				</article>
-			</section>
+		<div id="container">
+			<header>
+				<h1>Andrew Lim</h1>
+				<h6>Web Developer Enthusiast</h6>
+				<img id="my-picture" src="./furniture/img/me_100px.jpg">
+				<ul class="contact-icons">
+					<li><a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/ajlim/"><i class="fab fa-linkedin fa-3x"></i></a></li>
+					<li><a href="mailto:andrewjlim@outlook.com"><i class="fas fa-envelope-square fa-3x"></i></a></li>
+					<li><a href="tel:0418689745"><i class="fas fa-phone-square fa-3x"></i></a></li>
+				</ul>
+			</header>
+			<main>
+				<section class="about-me">
+					<p>I am a hands-on content manager, located in Sydney, with over a decade of experience.</p>
+					<p>With an interest in web development I am now able to spend more time in learning the intricacies of the many languages involved and loving it!.</p>
+				</section>
+				<section class="skills">
+					<h2>Skills</h2>
+				</section>
+				<section class="work-experience">
+					<h2>Work Experience</h2>
+				</section>
+				<section class="education">
+					<h2>Education</h2>
+				</section>
+				<section class="projects">
+					<h2>Projects</h2>
+				</section>
+				<section class="interests">
+					<h2>Interests</h2>
+				</section>
+				<section class="contact">
+					<h2>Contact</h2>
+				</section>
+			</main>
 		</div>
-
-		<footer>
-			&copy;andrewjlim.com 2017.
-		</footer>
 	</body>
 </html>
