--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 	<body>
 		<div id="container">
 			<header>
+				<i class="background-header-icon far fa-code fa-10x"></i>
 				<h1>Andrew Lim</h1>
-				<h6>Web Developer Enthusiast</h6>
+				<h6>Web Development Enthusiast</h6>
 				<img id="my-picture" src="./furniture/img/me_100px.jpg">
 				<ul class="contact-icons">
-					<li><a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/ajlim/"><i class="fab fa-linkedin fa-3x"></i></a></li>
-					<li><a href="mailto:andrewjlim@outlook.com"><i class="fas fa-envelope-square fa-3x"></i></a></li>
-					<li><a href="tel:0418689745"><i class="fas fa-phone-square fa-3x"></i></a></li>
+					<li><a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/ajlim/"><i class="fab fa-linkedin fa-5x"></i></a></li>
+					<li><a href="mailto:andrewjlim@outlook.com"><i class="fas fa-envelope-square fa-5x"></i></a></li>
+					<li><a href="tel:0418689745"><i class="fas fa-phone-square fa-5x"></i></a></li>
 				</ul>
 			</header>
 			<main>
@@ -29,21 +30,99 @@
 				</section>
 				<section class="skills">
 					<h2>Skills</h2>
+					<ul class="skills-list">
+						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-cogs fa-3x"></i></span><span class="icon-text">Content Management</span></li>
+						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="far fa-code fa-3x"></i></span><span class="icon-text">HTML/CSS</span></li>
+						<li><i class="fab fa-js-square fa-5x"></i><span class="icon-text">JavaScript</span></li>
+						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-paint-brush fa-3x"></i></span><span class="icon-text">UI Design</span></li>
+					</ul>
 				</section>
 				<section class="work-experience">
 					<h2>Work Experience</h2>
+					<article>
+						<img class="company-logo" src="./furniture/img/asics-logo.png" alt="Asics logo">
+						<h3>Online Content Coordinator</h3>
+						<div class="work-date">Feb 2018 - Aug 2018</div>
+						<p>Helped the online and marketing teams to update their product list during peak season.</p>
+						<ul>
+							<li>Added over 1000 products to the system using Excel, SAP Hybris and ASICS proprietary software.</li>
+							<li>Created system documentation on product enrichment and processes.</li>
+							<li>Identifed existence of system problems and proposed improvements.</li>
+						</ul>
+					</article>
+					<article>
+							<img class="company-logo" src="./furniture/img/macquarie-logo.png" alt="Macquarie Group logo">
+							<h3>Content Manager</h3>
+							<div class="work-date">Jan 2007 - Aug 2017</div>
+							<p>Daily management and training for Content Management System (Vignette).</p>
+							<ul>
+								<li>Worked closely with business groups to gather project deliverables.</li>
+								<li>Lead developer of web forms and EDMs.</li>
+								<li>Involved with three large scale CMS migrations.</li>
+							</ul>
+						</article>
 				</section>
 				<section class="education">
 					<h2>Education</h2>
+					<article>
+						<img class="company-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
+						<h3>Google Analytics Accreditation</h3>
+						<div class="work-date">Mar 2019</div>
+						<p>Basic and Advanced topics of Google analytics, including report and dashboard building, Segmentation and Marketing Funnel.</p>
+					</article>
+					<article>
+						<img class="company-logo" src="./furniture/img/udacity-logo.png" alt="Asics logo">
+						<h3>Front-End Web Developer Nanodegree</h3>
+						<div class="work-date">Dec 2018 - Mar 2019</div>
+						<p>Basic Web development and advanced javaScript topics, including mobile development, JavaScript testing, Promises and Web Services.</p>
+					</article>
+					<article>
+						<img class="company-logo" src="./furniture/img/tafe-nsw-logo.png" alt="Asics logo">
+						<h3>Cert IV in Web-based Technology</h3>
+						<div class="work-date">Feb 2014 - Nov 2015</div>
+						<p>Basic Web development, graphics, PHP and database management.</p>
+					</article>
+					<article>
+						<img class="company-logo" src="./furniture/img/uts-logo.png" alt="Asics logo">
+						<h3>BSc in Information Technology</h3>
+						<div class="work-date">Feb 2003 - Sep 2007</div>
+						<p>Computer Science degree with electives in UX, data mining, multimedia and industrial design.</p>
+						<p>Project Managment lead of twelve for final large scale project delivery.</p>
+					</article>
 				</section>
 				<section class="projects">
 					<h2>Projects</h2>
+					<article>
+						<h3>Memory Game</h3>
+						<img class="company-logo" src="./furniture/img/memory-game.png" alt="Asics logo">
+						<p>Memory game demonstrating knowledge of HTML, CSS (including flexbox) JavaScript, repsonsive design and media queries.</p>
+						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i>View in GitHub</a>
+					</article>
+					<article>
+						<h3>Classic Arcade Game</h3>
+						<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Asics logo">
+						<p>Frogger-like arcade game demonstrating Canvas and JavaScript knowledge of Classes and Objects and Prototype inheritence.</p>
+						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i>View in GitHub</a>
+					</article>
+					<article>
+						<h3>Restaurant Review App</h3>
+						<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Asics logo">
+						<p>Using an existing template and Mapbox API added accessiblity features, responsiveness and service workers for offline functionality.</p>
+						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i>View in GitHub</a>
+					</article>
 				</section>
 				<section class="interests">
 					<h2>Interests</h2>
+					<ul class="skills-list">
+						<li><i class="fas fa-desktop fa-3x"></i><span class="icon-text">Web Development</span></li>
+						<li><i class="far fa-film-alt fa-3x"></i><span class="icon-text">Movies</span></li>
+						<li><i class="far fa-chart-line fa-3x"></i><span class="icon-text">Digital Marketing</span></li>
+						<li><i class="fas fa-pencil-alt fa-3x"></i><span class="icon-text">Creative Writing</span></li>
+						</ul>
 				</section>
 				<section class="contact">
 					<h2>Contact</h2>
+					<p>Please feel free to contact me with any questions or inquiries.</p>
 				</section>
 			</main>
 		</div>
