--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="container">
 			<header>
-				<i class="background-header-icon far fa-code fa-10x"></i>
+				<!-- <i class="background-header-icon far fa-code fa-10x"></i> -->
 				<h1>Andrew Lim</h1>
 				<h6>Web Development Enthusiast</h6>
 				<img id="my-picture" src="./furniture/img/me_100px.jpg">
@@ -96,19 +96,19 @@
 						<h3>Memory Game</h3>
 						<img class="company-logo" src="./furniture/img/memory-game.png" alt="Asics logo">
 						<p>Memory game demonstrating knowledge of HTML, CSS (including flexbox) JavaScript, repsonsive design and media queries.</p>
-						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i>View in GitHub</a>
+						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i>View in GitHub</a>
 					</article>
 					<article>
 						<h3>Classic Arcade Game</h3>
 						<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Asics logo">
 						<p>Frogger-like arcade game demonstrating Canvas and JavaScript knowledge of Classes and Objects and Prototype inheritence.</p>
-						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i>View in GitHub</a>
+						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i>View in GitHub</a>
 					</article>
 					<article>
 						<h3>Restaurant Review App</h3>
 						<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Asics logo">
 						<p>Using an existing template and Mapbox API added accessiblity features, responsiveness and service workers for offline functionality.</p>
-						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i>View in GitHub</a>
+						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i>View in GitHub</a>
 					</article>
 				</section>
 				<section class="interests">
