swapped out pro font-awesome for free ones

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>Andrew J Lim | Personal Website</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-/pOR6TNYPdUaQQQRKQ4XHznZ4U2K/Lscb3u6jshUngC/31fLTuyX9FZb24gp4O3J" crossorigin="anonymous">
+		<!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-/pOR6TNYPdUaQQQRKQ4XHznZ4U2K/Lscb3u6jshUngC/31fLTuyX9FZb24gp4O3J" crossorigin="anonymous"> -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="./furniture/css/main.css">
 	</head>
@@ -32,7 +33,7 @@
 					<h2>Skills</h2>
 					<ul class="skills-list">
 						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-cogs fa-3x"></i></span><span class="icon-text">Content Management</span></li>
-						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="far fa-code fa-3x"></i></span><span class="icon-text">HTML/CSS</span></li>
+						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-code fa-3x"></i></span><span class="icon-text">HTML/CSS</span></li>
 						<li><i class="fab fa-js-square fa-5x"></i><span class="icon-text">JavaScript</span></li>
 						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-paint-brush fa-3x"></i></span><span class="icon-text">UI Design</span></li>
 					</ul>
@@ -115,8 +116,8 @@
 					<h2>Interests</h2>
 					<ul class="skills-list">
 						<li><i class="fas fa-desktop fa-3x"></i><span class="icon-text">Web Development</span></li>
-						<li><i class="far fa-film-alt fa-3x"></i><span class="icon-text">Movies</span></li>
-						<li><i class="far fa-chart-line fa-3x"></i><span class="icon-text">Digital Marketing</span></li>
+						<li><i class="fas fa-video fa-3x"></i><span class="icon-text">Movies</span></li>
+						<li><i class="far fa-chart-bar fa-3x"></i><span class="icon-text">Digital Marketing</span></li>
 						<li><i class="fas fa-pencil-alt fa-3x"></i><span class="icon-text">Creative Writing</span></li>
 						</ul>
 				</section>
