--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-/pOR6TNYPdUaQQQRKQ4XHznZ4U2K/Lscb3u6jshUngC/31fLTuyX9FZb24gp4O3J" crossorigin="anonymous"> -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700italic,700' rel='stylesheet' type='text/css'>  
 		<link rel="stylesheet" href="./furniture/css/main.css">
 	</head>
 	<body>
@@ -27,7 +28,7 @@
 			<main>
 				<section class="about-me">
 					<p>I am a hands-on content manager, located in Sydney, with over a decade of experience.</p>
-					<p>With an interest in web development I am now able to spend more time in learning the intricacies of the many languages involved and loving it!.</p>
+					<p>I love playing around with the intricacies of the many languages involved in web development.</p>
 				</section>
 				<section class="skills">
 					<h2>Skills</h2>
@@ -66,25 +67,25 @@
 				<section class="education">
 					<h2>Education</h2>
 					<article>
-						<img class="company-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
+						<img class="company-logo left-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
 						<h3>Google Analytics Accreditation</h3>
 						<div class="work-date">Mar 2019</div>
 						<p>Basic and Advanced topics of Google analytics, including report and dashboard building, Segmentation and Marketing Funnel.</p>
 					</article>
 					<article>
-						<img class="company-logo" src="./furniture/img/udacity-logo.png" alt="Asics logo">
+						<img class="company-logo left-logo" src="./furniture/img/udacity-logo.png" alt="Asics logo">
 						<h3>Front-End Web Developer Nanodegree</h3>
 						<div class="work-date">Dec 2018 - Mar 2019</div>
 						<p>Basic Web development and advanced javaScript topics, including mobile development, JavaScript testing, Promises and Web Services.</p>
 					</article>
 					<article>
-						<img class="company-logo" src="./furniture/img/tafe-nsw-logo.png" alt="Asics logo">
+						<img class="company-logo" height="20px" src="./furniture/img/tafe-nsw-logo.png" alt="Asics logo">
 						<h3>Cert IV in Web-based Technology</h3>
 						<div class="work-date">Feb 2014 - Nov 2015</div>
 						<p>Basic Web development, graphics, PHP and database management.</p>
 					</article>
 					<article>
-						<img class="company-logo" src="./furniture/img/uts-logo.png" alt="Asics logo">
+						<img class="company-logo" height="40px" src="./furniture/img/uts-logo.png" alt="Asics logo">
 						<h3>BSc in Information Technology</h3>
 						<div class="work-date">Feb 2003 - Sep 2007</div>
 						<p>Computer Science degree with electives in UX, data mining, multimedia and industrial design.</p>
@@ -97,19 +98,19 @@
 						<h3>Memory Game</h3>
 						<img class="company-logo" src="./furniture/img/memory-game.png" alt="Asics logo">
 						<p>Memory game demonstrating knowledge of HTML, CSS (including flexbox) JavaScript, repsonsive design and media queries.</p>
-						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i>View in GitHub</a>
+						<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
 					</article>
 					<article>
 						<h3>Classic Arcade Game</h3>
 						<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Asics logo">
 						<p>Frogger-like arcade game demonstrating Canvas and JavaScript knowledge of Classes and Objects and Prototype inheritence.</p>
-						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i>View in GitHub</a>
+						<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
 					</article>
 					<article>
 						<h3>Restaurant Review App</h3>
 						<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Asics logo">
 						<p>Using an existing template and Mapbox API added accessiblity features, responsiveness and service workers for offline functionality.</p>
-						<a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i>View in GitHub</a>
+						<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
 					</article>
 				</section>
 				<section class="interests">
@@ -121,11 +122,10 @@
 						<li><i class="fas fa-pencil-alt fa-3x"></i><span class="icon-text">Creative Writing</span></li>
 						</ul>
 				</section>
-				<section class="contact">
-					<h2>Contact</h2>
-					<p>Please feel free to contact me with any questions or inquiries.</p>
-				</section>
 			</main>
+			<footer>
+				<p>andrewjlim.com &copy;<span id="copyright-date">2019</span> </p>
+			</footer>
 		</div>
 	</body>
 </html>
