--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<body>
 		<div id="container">
 			<header>
-				<!-- <i class="background-header-icon far fa-code fa-10x"></i> -->
-				<h1>Andrew Lim</h1>
-				<h6>Web Development Enthusiast</h6>
+				<div class="header-text">
+					<h1>Andrew Lim</h1>
+					<h6>Web Development Enthusiast</h6>
+				</div>
 				<img id="my-picture" src="./furniture/img/me_100px.jpg">
 				<ul class="contact-icons">
 					<li><a href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-5x"></i></a></li>
@@ -41,77 +42,83 @@
 				</section>
 				<section class="work-experience">
 					<h2>Work Experience</h2>
-					<article>
-						<img class="company-logo" src="./furniture/img/asics-logo.png" alt="Asics logo">
-						<h3>Online Content Coordinator</h3>
-						<div class="work-date">Feb 2018 - Aug 2018</div>
-						<p>Helped the online and marketing teams to update their product list during peak season.</p>
-						<ul>
-							<li>Added over 1000 products to the system using Excel, SAP Hybris and ASICS proprietary software.</li>
-							<li>Created system documentation on product enrichment and processes.</li>
-							<li>Identifed existence of system problems and proposed improvements.</li>
-						</ul>
-					</article>
-					<article>
-							<img class="company-logo" src="./furniture/img/macquarie-logo.png" alt="Macquarie Group logo">
-							<h3>Content Manager</h3>
-							<div class="work-date">Jan 2007 - Aug 2017</div>
-							<p>Daily management and training for Content Management System (Vignette).</p>
+					<div class="articles">
+						<article>
+							<img class="company-logo" src="./furniture/img/asics-logo.png" alt="Asics logo">
+							<h3>Online Content Coordinator</h3>
+							<div class="work-date">Feb 2018 - Aug 2018</div>
+							<p>Helped the online and marketing teams to update their product list during peak season.</p>
 							<ul>
-								<li>Worked closely with business groups to gather project deliverables.</li>
-								<li>Lead developer of web forms and EDMs.</li>
-								<li>Involved with three large scale CMS migrations.</li>
+								<li>Added over 1000 products to the system using Excel, SAP Hybris and ASICS proprietary software.</li>
+								<li>Created system documentation on product enrichment and processes.</li>
+								<li>Identifed existence of system problems and proposed improvements.</li>
 							</ul>
 						</article>
+						<article>
+								<img class="company-logo" src="./furniture/img/macquarie-logo.png" alt="Macquarie Group logo">
+								<h3>Content Manager</h3>
+								<div class="work-date">Jan 2007 - Aug 2017</div>
+								<p>Daily management and training for Content Management System (Vignette).</p>
+								<ul>
+									<li>Worked closely with business groups to gather project deliverables.</li>
+									<li>Lead developer of web forms and EDMs.</li>
+									<li>Involved with three large scale CMS migrations.</li>
+								</ul>
+						</article>
+					</div>
 				</section>
 				<section class="education">
 					<h2>Education</h2>
-					<article>
-						<img class="company-logo left-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
-						<h3>Google Analytics Accreditation</h3>
-						<div class="work-date">Mar 2019</div>
-						<p>Basic and Advanced topics of Google analytics, including report and dashboard building, Segmentation and Marketing Funnel.</p>
-					</article>
-					<article>
-						<img class="company-logo left-logo" src="./furniture/img/udacity-logo.png" alt="Asics logo">
-						<h3>Front-End Web Developer Nanodegree</h3>
-						<div class="work-date">Dec 2018 - Mar 2019</div>
-						<p>Basic Web development and advanced javaScript topics, including mobile development, JavaScript testing, Promises and Web Services.</p>
-					</article>
-					<article>
-						<img class="company-logo" height="20px" src="./furniture/img/tafe-nsw-logo.png" alt="Asics logo">
-						<h3>Cert IV in Web-based Technology</h3>
-						<div class="work-date">Feb 2014 - Nov 2015</div>
-						<p>Basic Web development, graphics, PHP and database management.</p>
-					</article>
-					<article>
-						<img class="company-logo" height="40px" src="./furniture/img/uts-logo.png" alt="Asics logo">
-						<h3>BSc in Information Technology</h3>
-						<div class="work-date">Feb 2003 - Sep 2007</div>
-						<p>Computer Science degree with electives in UX, data mining, multimedia and industrial design.</p>
-						<p>Project Managment lead of twelve for final large scale project delivery.</p>
-					</article>
+					<div class="articles">
+						<article>
+							<img class="company-logo left-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
+							<h3>Google Analytics Accreditation</h3>
+							<div class="work-date">Mar 2019</div>
+							<p>Basic and Advanced topics of Google analytics, including report and dashboard building, Segmentation and Marketing Funnel.</p>
+						</article>
+						<article>
+							<img class="company-logo left-logo" src="./furniture/img/udacity-logo.png" alt="Asics logo">
+							<h3>Front-End Web Developer Nanodegree</h3>
+							<div class="work-date">Dec 2018 - Mar 2019</div>
+							<p>Basic Web development and advanced javaScript topics, including mobile development, JavaScript testing, Promises and Web Services.</p>
+						</article>
+						<article>
+							<img class="company-logo" height="20px" src="./furniture/img/tafe-nsw-logo.png" alt="Asics logo">
+							<h3>Cert IV in Web-based Technology</h3>
+							<div class="work-date">Feb 2014 - Nov 2015</div>
+							<p>Basic Web development, graphics, PHP and database management.</p>
+						</article>
+						<article>
+							<img class="company-logo" height="40px" src="./furniture/img/uts-logo.png" alt="Asics logo">
+							<h3>BSc in Information Technology</h3>
+							<div class="work-date">Feb 2003 - Sep 2007</div>
+							<p>Computer Science degree with electives in UX, data mining, multimedia and industrial design.</p>
+							<p>Project Managment lead of twelve for final large scale project delivery.</p>
+						</article>
+					</div>
 				</section>
 				<section class="projects">
 					<h2>Projects</h2>
-					<article>
-						<h3>Memory Game</h3>
-						<img class="company-logo" src="./furniture/img/memory-game.png" alt="Asics logo">
-						<p>Memory game demonstrating knowledge of HTML, CSS (including flexbox) JavaScript, repsonsive design and media queries.</p>
-						<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
-					</article>
-					<article>
-						<h3>Classic Arcade Game</h3>
-						<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Asics logo">
-						<p>Frogger-like arcade game demonstrating Canvas and JavaScript knowledge of Classes and Objects and Prototype inheritence.</p>
-						<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
-					</article>
-					<article>
-						<h3>Restaurant Review App</h3>
-						<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Asics logo">
-						<p>Using an existing template and Mapbox API added accessiblity features, responsiveness and service workers for offline functionality.</p>
-						<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
-					</article>
+					<div class="articles">
+						<article>
+							<h3>Memory Game</h3>
+							<img class="company-logo" src="./furniture/img/memory-game.png" alt="Asics logo">
+							<p>Memory game demonstrating knowledge of HTML, CSS (including flexbox) JavaScript, repsonsive design and media queries.</p>
+							<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
+						</article>
+						<article>
+							<h3>Classic Arcade Game</h3>
+							<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Asics logo">
+							<p>Frogger-like arcade game demonstrating Canvas and JavaScript knowledge of Classes and Objects and Prototype inheritence.</p>
+							<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
+						</article>
+						<article>
+							<h3>Restaurant Review App</h3>
+							<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Asics logo">
+							<p>Using an existing template and Mapbox API added accessiblity features, responsiveness and service workers for offline functionality.</p>
+							<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
+						</article>
+					</div>
 				</section>
 				<section class="interests">
 					<h2>Interests</h2>
