updated for sizes over 900px

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					<p>I love playing around with the intricacies of the many languages involved in web development.</p>
 				</section>
 				<section class="skills">
-					<h2>Skills</h2>
+					<h2>Skills</h2><div class="heading-triangle"></div>
+					<div class="heading-divider"></div>
 					<ul class="skills-list">
 						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-cogs fa-3x"></i></span><span class="icon-text">Content Management</span></li>
 						<li><span class="collapse-icon"><i class="fas fa-square fa-5x"></i><i class="fas fa-code fa-3x"></i></span><span class="icon-text">HTML/CSS</span></li>
@@ -41,20 +42,26 @@
 					</ul>
 				</section>
 				<section class="work-experience">
-					<h2>Work Experience</h2>
+					<h2>Work Experience</h2><div class="heading-triangle"></div>
+					<div class="heading-divider"></div>
 					<div class="articles">
 						<article>
-							<img class="company-logo" src="./furniture/img/asics-logo.png" alt="Asics logo">
-							<h3>Online Content Coordinator</h3>
-							<div class="work-date">Feb 2018 - Aug 2018</div>
-							<p>Helped the online and marketing teams to update their product list during peak season.</p>
-							<ul>
-								<li>Added over 1000 products to the system using Excel, SAP Hybris and ASICS proprietary software.</li>
-								<li>Created system documentation on product enrichment and processes.</li>
-								<li>Identifed existence of system problems and proposed improvements.</li>
-							</ul>
+							<div class="asics-article-image"></div>
+							<div class="article-copy">
+								<img class="company-logo" src="./furniture/img/asics-logo.png" alt="Asics logo">
+								<h3>Online Content Coordinator</h3>
+								<div class="work-date">Feb 2018 - Aug 2018</div>
+								<p>Helped the online and marketing teams to update their product list during peak season.</p>
+								<ul>
+									<li>Added over 1000 products to the system using Excel, SAP Hybris and ASICS proprietary software.</li>
+									<li>Created system documentation on product enrichment and processes.</li>
+									<li>Identifed existence of system problems and proposed improvements.</li>
+								</ul>
+							</div>
 						</article>
 						<article>
+							<div class="macquarie-article-image"></div>
+							<div class="article-copy">
 								<img class="company-logo" src="./furniture/img/macquarie-logo.png" alt="Macquarie Group logo">
 								<h3>Content Manager</h3>
 								<div class="work-date">Jan 2007 - Aug 2017</div>
@@ -64,11 +71,13 @@
 									<li>Lead developer of web forms and EDMs.</li>
 									<li>Involved with three large scale CMS migrations.</li>
 								</ul>
+							</div>
 						</article>
 					</div>
 				</section>
 				<section class="education">
-					<h2>Education</h2>
+					<h2>Education</h2><div class="heading-triangle"></div>
+					<div class="heading-divider"></div>
 					<div class="articles">
 						<article>
 							<img class="company-logo left-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
@@ -98,7 +107,8 @@
 					</div>
 				</section>
 				<section class="projects">
-					<h2>Projects</h2>
+					<h2>Projects</h2><div class="heading-triangle"></div>
+					<div class="heading-divider"></div>
 					<div class="articles">
 						<article>
 							<h3>Memory Game</h3>
@@ -121,7 +131,8 @@
 					</div>
 				</section>
 				<section class="interests">
-					<h2>Interests</h2>
+					<h2>Interests</h2><div class="heading-triangle"></div>
+					<div class="heading-divider"></div>
 					<ul class="skills-list">
 						<li><i class="fas fa-desktop fa-3x"></i><span class="icon-text">Web Development</span></li>
 						<li><i class="fas fa-video fa-3x"></i><span class="icon-text">Movies</span></li>
