updated alt tags for images and chnaged github links

--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
 					<div class="heading-divider"></div>
 					<div class="articles">
 						<article>
-							<img class="company-logo left-logo" src="./furniture/img/google-analytics-logo.png" alt="Asics logo">
+							<img class="company-logo left-logo" src="./furniture/img/google-analytics-logo.png" alt="Google Analytics logo">
 							<h3>Google Analytics Accreditation</h3>
 							<div class="work-date">Mar 2019</div>
 							<p>Basic and Advanced topics of Google analytics, including report and dashboard building, Segmentation and Marketing Funnel.</p>
 						</article>
 						<article>
-							<img class="company-logo left-logo" src="./furniture/img/udacity-logo.png" alt="Asics logo">
+							<img class="company-logo left-logo" src="./furniture/img/udacity-logo.png" alt="Udacity logo">
 							<h3>Front-End Web Developer Nanodegree</h3>
 							<div class="work-date">Dec 2018 - Mar 2019</div>
 							<p>Basic Web development and advanced javaScript topics, including mobile development, JavaScript testing, Promises and Web Services.</p>
 						</article>
 						<article>
-							<img class="company-logo" height="20px" src="./furniture/img/tafe-nsw-logo.png" alt="Asics logo">
+							<img class="company-logo" height="20px" src="./furniture/img/tafe-nsw-logo.png" alt="TAFE logo">
 							<h3>Cert IV in Web-based Technology</h3>
 							<div class="work-date">Feb 2014 - Nov 2015</div>
 							<p>Basic Web development, graphics, PHP and database management.</p>
 						</article>
 						<article>
-							<img class="company-logo" height="40px" src="./furniture/img/uts-logo.png" alt="Asics logo">
+							<img class="company-logo" height="40px" src="./furniture/img/uts-logo.png" alt="UTS logo">
 							<h3>BSc in Information Technology</h3>
 							<div class="work-date">Feb 2003 - Sep 2007</div>
 							<p>Computer Science degree with electives in UX, data mining, multimedia and industrial design.</p>
@@ -112,21 +112,21 @@
 					<div class="articles">
 						<article>
 							<h3>Memory Game</h3>
-							<img class="company-logo" src="./furniture/img/memory-game.png" alt="Asics logo">
+							<img class="company-logo" src="./furniture/img/memory-game.png" alt="Image of memory game">
 							<p>Memory game demonstrating knowledge of HTML, CSS (including flexbox) JavaScript, repsonsive design and media queries.</p>
-							<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
+							<a class="github-link" href="https://github.com/git-andrewjlim/fend-nanodegree-memory-game"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
 						</article>
 						<article>
 							<h3>Classic Arcade Game</h3>
-							<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Asics logo">
+							<img class="company-logo" src="./furniture/img/classic-arcade-game.png" alt="Image of classic arcade game">
 							<p>Frogger-like arcade game demonstrating Canvas and JavaScript knowledge of Classes and Objects and Prototype inheritence.</p>
-							<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
+							<a class="github-link" href="https://github.com/git-andrewjlim/fend-nanodegree-classic-arcade-game"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
 						</article>
 						<article>
 							<h3>Restaurant Review App</h3>
-							<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Asics logo">
+							<img class="company-logo" src="./furniture/img/restaurant-review-app.png" alt="Image of restaurant review app">
 							<p>Using an existing template and Mapbox API added accessiblity features, responsiveness and service workers for offline functionality.</p>
-							<a class="github-link" href="https://github.com/git-andrewjlim"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
+							<a class="github-link" href="https://github.com/git-andrewjlim/fend-nanodegree-restaurant-review-app"><i class="fab fa-github-square fa-3x"></i><span class="view-in-github">View in GitHub</span></a>
 						</article>
 					</div>
 				</section>
