--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				</section>
 			</main>
 			<footer>
-				<p>andrewjlim.com &copy;<span id="copyright-date">2019</span> </p>
+				<p>&copy; <span id="copyright-date">2019</span> andrewjlim.com</p>
 			</footer>
 		</div>
 	</body>
